--- a/composer.json
+++ b/composer.json
@@ -102,7 +102,8 @@
         "webflo/drupal-core-require-dev": "^8.6.0"
     },
     "conflict": {
-        "drupal/drupal": "*"
+        "drupal/drupal": "*",
+        "symfony/http-foundation": "3.4.24"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
