--- a/config/install/system.site.yml
+++ b/config/install/system.site.yml
@@ -5,7 +5,7 @@ slogan: 'Collaborative open source project led by the Government of Canada'
 page:
   403: ''
   404: ''
-  front: ''
+  front: /node
 admin_compact_mode: false
 weight_select_max: 100
 langcode: en
