--- a/config/install/core.entity_view_display.node.page.default.yml
+++ b/config/install/core.entity_view_display.node.page.default.yml
@@ -49,6 +49,7 @@ third_party_settings:
               attributes: ''
         components:
           aea63d77-60bf-408e-8694-654978632575:
+            uuid: aea63d77-60bf-408e-8694-654978632575
             region: left
             configuration:
               label_display: '0'
@@ -58,6 +59,7 @@ third_party_settings:
             additional: {  }
             weight: -10
           00ae618b-2e31-4de6-aa06-1cdee5000376:
+            uuid: 00ae618b-2e31-4de6-aa06-1cdee5000376
             region: right
             configuration:
               id: 'block_content:cf8209e7-dbe5-4f66-8146-5fc52de7832d'
@@ -76,6 +78,7 @@ third_party_settings:
         layout_settings: {  }
         components:
           099b8e08-2a3c-4f2a-8491-9da999f3715f:
+            uuid: 099b8e08-2a3c-4f2a-8491-9da999f3715f
             region: content
             configuration:
               label_display: '0'
@@ -90,6 +93,7 @@ third_party_settings:
             additional: {  }
             weight: -8
           bc7bd5e3-b1f7-41bf-851f-7ac98937291b:
+            uuid: bc7bd5e3-b1f7-41bf-851f-7ac98937291b
             region: content
             configuration:
               label_display: '0'
