--- a/config/optional/pathauto.pattern.idea.yml
+++ b/config/optional/pathauto.pattern.idea.yml
@@ -15,6 +15,7 @@ selection_criteria:
     negate: false
     context_mapping:
       node: node
+    uuid: 6c2348d8-0d11-4907-9d66-d468feeef56b
 selection_logic: and
 weight: 1
 relationships: {  }
