--- a/config/install/core.entity_view_display.node.suggested_dataset.default.yml
+++ b/config/install/core.entity_view_display.node.suggested_dataset.default.yml
@@ -59,6 +59,7 @@ third_party_settings:
               attributes: ''
         components:
           c584ae24-876f-454e-8c2c-eb6f3b2ed940:
+            uuid: c584ae24-876f-454e-8c2c-eb6f3b2ed940
             region: right
             configuration:
               id: 'block_content:cf8209e7-dbe5-4f66-8146-5fc52de7832d'
@@ -72,6 +73,7 @@ third_party_settings:
             additional: {  }
             weight: 0
           aae483c8-5f05-4575-8011-f7d448abca4c:
+            uuid: aae483c8-5f05-4575-8011-f7d448abca4c
             region: left
             configuration:
               label_display: '0'
@@ -105,6 +107,7 @@ third_party_settings:
               attributes: class|well
         components:
           a949ae57-1898-483b-96de-fb09ae012469:
+            uuid: a949ae57-1898-483b-96de-fb09ae012469
             region: right
             configuration:
               label_display: '0'
@@ -120,6 +123,7 @@ third_party_settings:
             additional: {  }
             weight: 2
           ac997583-4154-43ac-b024-b9e45babf456:
+            uuid: ac997583-4154-43ac-b024-b9e45babf456
             region: right
             configuration:
               label_display: '0'
@@ -134,6 +138,7 @@ third_party_settings:
             additional: {  }
             weight: 3
           32eb149f-1a75-4d7b-8a2c-3dbc41ddd2d9:
+            uuid: 32eb149f-1a75-4d7b-8a2c-3dbc41ddd2d9
             region: left
             configuration:
               id: 'field_block:node:suggested_dataset:field_status'
@@ -151,6 +156,7 @@ third_party_settings:
             additional: {  }
             weight: 4
           99eae66a-01db-4041-8dde-bd2517e3c1b3:
+            uuid: 99eae66a-01db-4041-8dde-bd2517e3c1b3
             region: left
             configuration:
               id: 'field_block:node:suggested_dataset:field_status_link'
@@ -172,6 +178,7 @@ third_party_settings:
             additional: {  }
             weight: 5
           33d570cd-4026-4d93-955d-0ab86b8ce522:
+            uuid: 33d570cd-4026-4d93-955d-0ab86b8ce522
             region: left
             configuration:
               id: webform_block
@@ -203,6 +210,7 @@ third_party_settings:
               attributes: ''
         components:
           c35ebc98-dcb5-4f3d-8344-445118624ab1:
+            uuid: c35ebc98-dcb5-4f3d-8344-445118624ab1
             region: main
             configuration:
               label_display: '0'
