--- a/config/install/image.style.media_library.yml
+++ b/config/install/image.style.media_library.yml
@@ -5,6 +5,7 @@ name: media_library
 label: 'Media Library (220x220)'
 effects:
   c9ca0f97-f662-4819-b254-9a684da6434c:
+    uuid: c9ca0f97-f662-4819-b254-9a684da6434c
     id: image_scale
     weight: 0
     data:
