--- a/config/optional/pathauto.pattern.app.yml
+++ b/config/optional/pathauto.pattern.app.yml
@@ -15,6 +15,7 @@ selection_criteria:
     negate: false
     context_mapping:
       node: node
+    uuid: 972fd13c-6d6c-42be-a211-b251ff893aff
 selection_logic: and
 weight: -4
 relationships: {  }
