--- a/config/optional/pathauto.pattern.blog.yml
+++ b/config/optional/pathauto.pattern.blog.yml
@@ -15,6 +15,7 @@ selection_criteria:
     negate: false
     context_mapping:
       node: node
+    uuid: a2523f13-0d89-4a93-bcfb-7bdcfa139049
 selection_logic: and
 weight: -3
 relationships: {  }
