--- a/config/optional/pathauto.pattern.blog_author_fr.yml
+++ b/config/optional/pathauto.pattern.blog_author_fr.yml
@@ -17,6 +17,7 @@ selection_criteria:
     negate: false
     context_mapping:
       taxonomy_term: taxonomy_term
+    uuid: 5ad63508-6478-44ac-bcd3-ae73e5472cc6
   67cac647-f800-40ce-b73b-09993e5faa8a:
     id: language
     langcodes:
@@ -24,6 +25,7 @@ selection_criteria:
     negate: false
     context_mapping:
       language: 'taxonomy_term:langcode:language'
+    uuid: 67cac647-f800-40ce-b73b-09993e5faa8a
 selection_logic: and
 weight: -1
 relationships:
