--- a/config/optional/pathauto.pattern.commitment.yml
+++ b/config/optional/pathauto.pattern.commitment.yml
@@ -16,6 +16,7 @@ selection_criteria:
     negate: false
     context_mapping:
       node: node
+    uuid: 762f7318-73bc-45ff-8fbd-971292237436
   9424c8f6-a410-487c-af18-88c445a2274a:
     id: language
     langcodes:
@@ -23,6 +24,7 @@ selection_criteria:
     negate: false
     context_mapping:
       language: 'node:langcode:language'
+    uuid: 9424c8f6-a410-487c-af18-88c445a2274a
 selection_logic: and
 weight: -10
 relationships:
