--- a/config/optional/pathauto.pattern.commitment_fr.yml
+++ b/config/optional/pathauto.pattern.commitment_fr.yml
@@ -16,6 +16,7 @@ selection_criteria:
     negate: false
     context_mapping:
       node: node
+    uuid: 9edd4572-3411-42f5-9fb8-dfce0f444c54
   ea37f702-0c49-4298-b162-8197d996ca92:
     id: language
     langcodes:
@@ -23,6 +24,7 @@ selection_criteria:
     negate: false
     context_mapping:
       language: 'node:langcode:language'
+    uuid: ea37f702-0c49-4298-b162-8197d996ca92
 selection_logic: and
 weight: -9
 relationships:
