--- a/config/optional/pathauto.pattern.consultation.yml
+++ b/config/optional/pathauto.pattern.consultation.yml
@@ -15,6 +15,7 @@ selection_criteria:
     negate: false
     context_mapping:
       node: node
+    uuid: d8acce66-aa89-4d64-a333-c7280032601d
 selection_logic: and
 weight: 0
 relationships: {  }
