--- a/config/optional/pathauto.pattern.landing.yml
+++ b/config/optional/pathauto.pattern.landing.yml
@@ -15,6 +15,7 @@ selection_criteria:
     negate: false
     context_mapping:
       node: node
+    uuid: 0d8cd5e7-4b39-4aa3-96f4-3f85be743e12
 selection_logic: and
 weight: 2
 relationships: {  }
