--- a/config/optional/pathauto.pattern.map_fr.yml
+++ b/config/optional/pathauto.pattern.map_fr.yml
@@ -16,6 +16,7 @@ selection_criteria:
     negate: false
     context_mapping:
       node: node
+    uuid: 4b2b6f59-0434-4919-b118-b5097fe7b083
   dc428943-be95-4e17-98e9-0415d67f5660:
     id: language
     langcodes:
@@ -23,6 +24,7 @@ selection_criteria:
     negate: false
     context_mapping:
       language: 'node:langcode:language'
+    uuid: dc428943-be95-4e17-98e9-0415d67f5660
 selection_logic: and
 weight: 4
 relationships:
