--- a/config/optional/pathauto.pattern.page.yml
+++ b/config/optional/pathauto.pattern.page.yml
@@ -16,6 +16,7 @@ selection_criteria:
     negate: false
     context_mapping:
       node: node
+    uuid: c3b9c427-fcac-4301-b846-cb02795e5522
   3fb2e2f3-a537-4e2e-9183-88953d41f7c8:
     id: language
     langcodes:
@@ -23,6 +24,7 @@ selection_criteria:
     negate: false
     context_mapping:
       language: 'node:langcode:language'
+    uuid: 3fb2e2f3-a537-4e2e-9183-88953d41f7c8
 selection_logic: and
 weight: -8
 relationships:
