--- a/config/optional/pathauto.pattern.page_fr.yml
+++ b/config/optional/pathauto.pattern.page_fr.yml
@@ -16,6 +16,7 @@ selection_criteria:
     negate: false
     context_mapping:
       node: node
+    uuid: 114966cb-a477-4879-a8d5-f3a07296e93f
   b4f5bdc9-3dc4-4ce3-b610-4e6b46d32e74:
     id: language
     langcodes:
@@ -23,6 +24,7 @@ selection_criteria:
     negate: false
     context_mapping:
       language: 'node:langcode:language'
+    uuid: b4f5bdc9-3dc4-4ce3-b610-4e6b46d32e74
 selection_logic: and
 weight: -7
 relationships:
