--- a/config/optional/pathauto.pattern.suggested_dataset.yml
+++ b/config/optional/pathauto.pattern.suggested_dataset.yml
@@ -15,6 +15,7 @@ selection_criteria:
     negate: false
     context_mapping:
       node: node
+    uuid: 2434a551-2bc6-4cd6-a09c-036ec39d5b9d
 selection_logic: and
 weight: 5
 relationships: {  }
