--- a/config/optional/pathauto.pattern.taxonomy.yml
+++ b/config/optional/pathauto.pattern.taxonomy.yml
@@ -26,6 +26,7 @@ selection_criteria:
     negate: false
     context_mapping:
       taxonomy_term: taxonomy_term
+    uuid: 2bfc75d4-ff78-40a0-9ffb-08be1ed66340
 selection_logic: and
 weight: 6
 relationships: {  }
