--- a/config/optional/pathauto.pattern.webform.yml
+++ b/config/optional/pathauto.pattern.webform.yml
@@ -16,6 +16,7 @@ selection_criteria:
     negate: false
     context_mapping:
       node: node
+    uuid: 7ebe7b66-0387-4ce6-aab8-6150b93d7f16
   e6d4e3e3-6102-4019-8cb3-7ff2716d44a3:
     id: language
     langcodes:
@@ -23,6 +24,7 @@ selection_criteria:
     negate: false
     context_mapping:
       language: 'node:langcode:language'
+    uuid: e6d4e3e3-6102-4019-8cb3-7ff2716d44a3
 selection_logic: and
 weight: -6
 relationships:
