composer: syncing the versions with opengov repo

--- a/composer.json
+++ b/composer.json
@@ -70,8 +70,8 @@
         "drupal/autologout": "1.0.0",
         "drupal/bootstrap_layouts": "5.1.0",
         "drupal/ckeditor_codemirror": "2.2.0",
-        "drupal/console": "^1.0.2",
-        "drupal/core": "^8.7.0",
+        "drupal/console": "1.9.1",
+        "drupal/core": "8.7.7",
         "drupal/csv_serialization": "1.4.0",
         "drupal/facets": "1.4.0",
         "drupal/fontawesome": "2.14.0",
@@ -84,11 +84,11 @@
         "drupal/redirect": "1.4.0",
         "drupal/search_api": "1.14.0",
         "drupal/search_api_solr": "3.4.0",
-        "drupal/simple_sitemap": "3.4.0",
+        "drupal/simple_sitemap": "3.3.0",
         "drupal/token_filter": "1.1.0",
         "drupal/views_bootstrap": "4.1.0",
         "drupal/webform": "5.4.0",
-        "drush/drush": "^9.0.0",
+        "drush/drush": "^9.7",
         "fortawesome/font-awesome": "5.9.0",
         "oomphinc/composer-installers-extender": "^1.1",
         "opengov/gcweb": "dev-master",
