--- a/modules/custom/map/map.libraries.yml
+++ b/modules/custom/map/map.libraries.yml
@@ -1,23 +1,23 @@
 polyfill.ie:
   version: VERSION
   js:
-    '/modules/custom/map/js/ie-polyfills.js': { type: external, minified: true, preprocess: false }
+    /profiles/og/modules/custom/map/js/ie-polyfills.js: { type: external, minified: true, preprocess: false }
 
 fgpv:
   version: VERSION
   css:
     base:
-      '/modules/custom/map/css/rv-styles.css': { type: external, minified: true }
+      /profiles/og/modules/custom/map/css/rv-styles.css: { type: external, minified: true }
   js:
-    '/modules/custom/map/js/rv-main.js': { type: external, minified: true, preprocess: false, attributes: { defer: true } }
+    /profiles/og/modules/custom/map/js/rv-main.js: { type: external, minified: true, preprocess: false, attributes: { defer: true } }
 
 mapview:
   version: VERSION
   css:
     base:
-      /modules/custom/map/css/map.css: {}
+      /profiles/og/modules/custom/map/css/map.css: {}
   js:
-    /modules/custom/map/js/mapview.js: { preprocess: false, attributes: { defer: true } }
+    /profiles/og/modules/custom/map/js/mapview.js: { preprocess: false, attributes: { defer: true } }
   dependencies:
     - core/jquery
     - core/jquery.once
@@ -26,4 +26,4 @@ mapview:
 geomap:
   version: VERSION
   js:
-    /modules/custom/map/js/geomap/geomap.js: {}
+    /profiles/og/modules/custom/map/js/geomap/geomap.js: {}
