update: core and contrib modules

--- a/composer.json
+++ b/composer.json
@@ -66,12 +66,12 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/drupal-scaffold": "^2.5",
-        "drupal/admin_toolbar": "1.27.0",
+        "drupal/admin_toolbar": "2.0.0",
         "drupal/autologout": "1.0.0",
         "drupal/bootstrap_layouts": "5.1.0",
         "drupal/ckeditor_codemirror": "2.2.0",
-        "drupal/console": "1.9.3",
-        "drupal/core": "8.7.8",
+        "drupal/console": "1.9.4",
+        "drupal/core": "8.7.9",
         "drupal/csv_serialization": "1.4.0",
         "drupal/facets": "1.4.0",
         "drupal/fontawesome": "2.14.0",
@@ -82,16 +82,17 @@
         "drupal/metatag": "1.10.0",
         "drupal/pathauto": "1.5.0",
         "drupal/redirect": "1.4.0",
-        "drupal/search_api": "1.14.0",
+        "drupal/search_api": "1.15.0",
         "drupal/search_api_solr": "3.7.0",
         "drupal/simple_sitemap": "3.4.0",
         "drupal/token_filter": "1.1.0",
         "drupal/views_bootstrap": "4.1.0",
-        "drupal/webform": "5.4.0",
+        "drupal/webform": "5.5.0",
         "drush/drush": "^9.7",
         "fortawesome/font-awesome": "5.9.0",
         "oomphinc/composer-installers-extender": "^1.1",
         "opengov/gcweb": "dev-master",
+        "symfony/event-dispatcher":"4.3.4 as 3.4.99",
         "vlucas/phpdotenv": "^2.4",
         "w8tcha/ckeditor-codemirror": "1.17",
         "webflo/drupal-finder": "^1.0.0",
@@ -122,7 +123,6 @@
                 "Allow exposed form for non-ajax block displays": "https://www.drupal.org/files/issues/2692297-8.patch",
                 "Undefined index: identifier in view's DisplayPluginBase->isIdentifierUnique()": "https://www.drupal.org/files/issues/2882031-10_0.patch",
                 "Error: Call to a member function getLabel() after enable layout_builder": "https://www.drupal.org/files/issues/2018-07-16/2985882-entityfield-2.patch",
-                "Performance Degradation in Layout Builder and other places likely": "https://www.drupal.org/files/issues/2019-08-21/d8_entity_validation.patch",
                 "Terrible performance when rendering multi-value fields in views": "https://www.drupal.org/files/issues/2018-04-03/views-multivalue_field_rendering_performance-2846485-23.patch",
                 "Views exposed sort filters does not sort with facets": "https://www.drupal.org/files/issues/2018-10-30/views-exposed-sort-filters-2992672-10.patch"
             }
