--- a/modules/custom/comment_spam/comment_spam.links.menu.yml
+++ b/modules/custom/comment_spam/comment_spam.links.menu.yml
@@ -1,6 +1,6 @@
 comment_spam.admin:
   title: 'Comment Spam module settings'
-  description: 'example of how to make an admin settings page link'
+  description: 'Admin link for comment spam module'
   parent: system.admin_config_ui
   route_name: comment_spam.admin_settings
   weight: 100
