--- a/config/install/comment_spam.settings.yml
+++ b/config/install/comment_spam.settings.yml
@@ -3,4 +3,4 @@ default_list: ["Chnlovecomplaints","Russiangirldating","Russianwomendate","Trust
                "Oddsexch","Porn.cartoons","Ukrainianwomen","Remmont","Verbum","Hec.su","Femdomspanking"]
 custom_list: []
 include_default_list: 0
-webform_list: []
+webform_list: ['contact']
