--- a/composer.json
+++ b/composer.json
@@ -82,6 +82,7 @@
         "drupal/metatag": "1.11.0",
         "drupal/pathauto": "1.6.0",
         "drupal/redirect": "1.5.0",
+	"drupal/redis": "1.4",
         "drupal/search_api": "1.15.0",
         "drupal/search_api_solr": "3.9.0",
         "drupal/simple_sitemap": "3.5.0",
