--- a/composer.json
+++ b/composer.json
@@ -77,9 +77,11 @@
         "drupal/fontawesome": "2.15.0",
         "drupal/google_analytics": "2.4.0",
         "drupal/honeypot": "1.30.0",
+	"drupal/login_security": "2.0.0",
         "drupal/memcache": "2.0.0",
         "drupal/menu_breadcrumb": "1.12.0",
         "drupal/metatag": "1.11.0",
+	"drupal/password_policy": "3.0-beta1",
         "drupal/pathauto": "1.6.0",
         "drupal/redirect": "1.5.0",
 	"drupal/redis": "1.4",
