--- a/composer.json
+++ b/composer.json
@@ -87,6 +87,7 @@
 	"drupal/redis": "1.4",
         "drupal/search_api": "1.15.0",
         "drupal/search_api_solr": "3.9.0",
+	"drupal/seckit": "2.0.0",
         "drupal/simple_sitemap": "3.5.0",
         "drupal/token_filter": "1.1.0",
         "drupal/views_bootstrap": "4.1.0",
