rollback composer version in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
   # update composer
   - composer clear-cache
   - composer --verbose self-update --$COMPOSER_CHANNEL
+  - composer self-update --rollback
   - composer --version
 
 install:
