--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,7 @@
         "ext-json": "*",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
-        "drupal-composer/drupal-scaffold": "^2.5",
+        "drupal/core-composer-scaffold": "^8.8.0",
         "drupal/admin_toolbar": "2.0.0",
         "drupal/autologout": "1.0.0",
         "drupal/bootstrap_layouts": "5.1.0",
@@ -145,9 +145,8 @@
             "drush/Commands/{$name}": [ "type:drupal-drush" ]
         },
         "drupal-scaffold": {
-            "initial": {
-                ".editorconfig": "../.editorconfig",
-                ".gitattributes": "../.gitattributes"
+            "locations": {
+                "web-root": "html/"
             }
         }
     }
