add core_version_requirement for custom modules

--- a/modules/custom/alter_view/alter_view.info.yml
+++ b/modules/custom/alter_view/alter_view.info.yml
@@ -3,3 +3,4 @@ description: 'Alter the content of custom views'
 type: module
 core: 8.x
 package: 'Open Government'
+core_version_requirement: ^8 || ^9
