--- a/modules/custom/og_ext_user/og_ext_user.info.yml
+++ b/modules/custom/og_ext_user/og_ext_user.info.yml
@@ -2,4 +2,5 @@ name: 'Open Government Extend User'
 description: 'Provides default user roles, users, and permissions.'
 type: module
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Open Government'
