--- a/modules/custom/adobe_analytics/adobe_analytics.info.yml
+++ b/modules/custom/adobe_analytics/adobe_analytics.info.yml
@@ -3,3 +3,4 @@ type: module
 description: Adding Adobe Analytics metadata and javascript libraries
 package: Open Government
 core: 8.x
+core_version_requirement: ^8 || ^9
