--- a/modules/custom/alter_field/alter_field.info.yml
+++ b/modules/custom/alter_field/alter_field.info.yml
@@ -3,3 +3,4 @@ description: 'Alter the configuration of a field'
 type: module
 core: 8.x
 package: 'Open Government'
+core_version_requirement: ^8 || ^9
