--- a/modules/custom/content_type_breadcrumb/content_type_breadcrumb.info.yml
+++ b/modules/custom/content_type_breadcrumb/content_type_breadcrumb.info.yml
@@ -3,6 +3,7 @@ description: 'The module generates custom breadcrumb for nodes of content type'
 
 type: module
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Open Government'
 version: 1.0
 configure: content_type_breadcrumb.form
