--- a/modules/custom/map/map.info.yml
+++ b/modules/custom/map/map.info.yml
@@ -2,6 +2,7 @@ name: 'map'
 type: module
 description: 'Implement FGP viewer for map content type'
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Open Government'
 dependencies:
   - drupal:node
