--- a/modules/custom/og_ext_cron/og_ext_cron.info.yml
+++ b/modules/custom/og_ext_cron/og_ext_cron.info.yml
@@ -2,4 +2,5 @@ name: 'Extended Cron'
 description: 'Extended CRON jobs'
 type: module
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Open Government'
