--- a/modules/custom/voting_webform/voting_webform.info.yml
+++ b/modules/custom/voting_webform/voting_webform.info.yml
@@ -2,6 +2,7 @@ name: 'Voting Webform'
 description: 'Webform functionality related extension for voting'
 type: module
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Open Government'
 
 # Required modules
