--- a/modules/custom/webform_resend/webform_resend.info.yml
+++ b/modules/custom/webform_resend/webform_resend.info.yml
@@ -3,5 +3,6 @@ description: 'Resend webform submissions'
 
 type: module
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Open Government'
 version: 1.0
