--- a/og.info.yml
+++ b/og.info.yml
@@ -2,6 +2,7 @@ name: Open Government
 type: profile
 description: 'Distribution profile for the Open Government project for Government of Canada'
 core: 8.x
+core_version_requirement: ^8 || ^9
 
 # Required modules to install to support the profile
 install:
