Removed core keys from the custom module info.ymls. Changed drupal/core composer requirements from ^8 to ^9. Set core_version_requirements to just ^9. Modified some getStorage and getStatus and getPublished calls to be static, as per drupal 9 docs.

--- a/modules/custom/adobe_analytics/adobe_analytics.info.yml
+++ b/modules/custom/adobe_analytics/adobe_analytics.info.yml
@@ -2,5 +2,4 @@ name: Adobe Analytics
 type: module
 description: Adding Adobe Analytics metadata and javascript libraries
 package: Open Government
-core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^9
