--- a/modules/custom/alter_block/alter_block.info.yml
+++ b/modules/custom/alter_block/alter_block.info.yml
@@ -1,6 +1,5 @@
 name: 'Alter custom block'
 description: 'Alter the content of custom block'
 type: module
-core: 8.x
 package: 'Open Government'
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^9
