--- a/composer.json
+++ b/composer.json
@@ -48,13 +48,13 @@
         "ext-json": "*",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
-        "drupal/core-composer-scaffold": "^8.8.0",
+        "drupal/core-composer-scaffold": "^9",
         "drupal/admin_toolbar": "3.1.0",
         "drupal/autologout": "1.3.0",
         "drupal/bootstrap_layouts": "5.2.0",
         "drupal/ckeditor_codemirror": "2.3.0",
         "drupal/console": "1.9.8",
-        "drupal/core": "8.9.20",
+        "drupal/core": "^9",
         "drupal/csv_serialization": "2.0.0",
         "drupal/facets": "1.8.0",
         "drupal/fontawesome": "2.21.0",
@@ -82,7 +82,7 @@
         "zaporylie/composer-drupal-optimizations": "^1.2.0"
     },
     "require-dev": {
-        "drupal/core-dev": "^8.9.20"
+        "drupal/core-dev": "^9"
     },
     "conflict": {
         "drupal/drupal": "*",
