--- a/modules/custom/comment_spam/comment_spam.info.yml
+++ b/modules/custom/comment_spam/comment_spam.info.yml
@@ -6,5 +6,4 @@ dependencies:
   -drupal:views
   -drupal:comment
 type: module
-core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^9
