--- a/modules/custom/map/map.info.yml
+++ b/modules/custom/map/map.info.yml
@@ -1,8 +1,7 @@
 name: 'map'
 type: module
 description: 'Implement FGP viewer for map content type'
-core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^9
 package: 'Open Government'
 dependencies:
   - drupal:node
