--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,7 @@
         "fortawesome/font-awesome": "6.1.1",
         "oomphinc/composer-installers-extender": "^2.0.0",
         "opengov/gcweb": "dev-master",
-        "symfony/event-dispatcher": "4.3.4 as 3.4.99",
+        "symfony/event-dispatcher": "^4.4",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "2.0.1",
         "zaporylie/composer-drupal-optimizations": "^1.2.0"
