--- a/composer.json
+++ b/composer.json
@@ -75,7 +75,7 @@
         "drush/drush": "^10.0.0",
         "fortawesome/font-awesome": "6.1.1",
         "oomphinc/composer-installers-extender": "^2.0.0",
-        "opengov/gcweb": "dev-master",
+        "opengov/gcweb": "dev-drupal9-compatibility",
         "symfony/event-dispatcher": "^4.4",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "2.0.1",
