--- a/modules/custom/map/assets/config.rcs.fr-CA.json
+++ b/modules/custom/map/assets/config.rcs.fr-CA.json
@@ -11,12 +11,22 @@
       ]
     },
     "sideMenu": {
-      "logo": false
+      "logo": true,
+      "items": [
+        [
+          "layers",
+          "basemap"
+        ],
+        [
+          "fullscreen",
+          "export",
+          "share",
+          "touch",
+          "help"
+        ]
+      ]
     },
     "help": {
-      "folderName": "default"
-    },
-    "about": {
       "folderName": "default"
     },
     "legendIsOpen": {
@@ -25,7 +35,7 @@
       "small": false
     }
   },
-  "version": "2.0",
+  "version": "3.3.1",
   "language": "fr",
   "services": {
     "proxyUrl": "https://maps.canada.ca/wmsproxy/ws/wmsproxy/executeFromProxy",
@@ -51,6 +61,7 @@
       }
     }
   },
+  "plugins": {},
   "map": {
     "initialBasemapId": "baseNrCan",
     "components": {
@@ -517,3 +528,4 @@
     ]
   }
 }
+
