change core version req for profile+custom modules

--- a/modules/custom/voting_webform/voting_webform.info.yml
+++ b/modules/custom/voting_webform/voting_webform.info.yml
@@ -1,7 +1,7 @@
 name: 'Voting Webform'
 description: 'Webform functionality related extension for voting'
 type: module
-core_version_requirement: ^9
+core_version_requirement: ^8 || ^9
 package: 'Open Government'
 
 # Required modules
