--- a/modules/custom/adobe_analytics/adobe_analytics.info.yml
+++ b/modules/custom/adobe_analytics/adobe_analytics.info.yml
@@ -2,4 +2,4 @@ name: Adobe Analytics
 type: module
 description: Adding Adobe Analytics metadata and javascript libraries
 package: Open Government
-core_version_requirement: ^9
+core_version_requirement: ^8 || ^9
