--- a/modules/custom/external_comment/external_comment.info.yml
+++ b/modules/custom/external_comment/external_comment.info.yml
@@ -1,7 +1,7 @@
 name: 'external_comment'
 type: module
 description: 'Enable external systems to utilize Drupal core commenting system (Comment API)'
-core_version_requirement: ^9
+core_version_requirement: ^8 || ^9
 package: 'Open Government'
 dependencies:
   - drupal:node
