--- a/modules/custom/og_ext_cron/og_ext_cron.info.yml
+++ b/modules/custom/og_ext_cron/og_ext_cron.info.yml
@@ -1,5 +1,5 @@
 name: 'Extended Cron'
 description: 'Extended CRON jobs'
 type: module
-core_version_requirement: ^9
+core_version_requirement: ^8 || ^9
 package: 'Open Government'
