--- a/modules/custom/og_ext_user/og_ext_user.info.yml
+++ b/modules/custom/og_ext_user/og_ext_user.info.yml
@@ -1,5 +1,5 @@
 name: 'Open Government Extend User'
 description: 'Provides default user roles, users, and permissions.'
 type: module
-core_version_requirement: ^9
+core_version_requirement: ^8 || ^9
 package: 'Open Government'
