--- a/composer.json
+++ b/composer.json
@@ -46,40 +46,39 @@
     "require": {
         "php": ">=8",
         "ext-json": "*",
-        "composer/installers": "^1.2",
-        "cweagans/composer-patches": "^1.6.5",
-        "drupal/core-composer-scaffold": "^9",
+        "composer/installers": "^1.9.0",
+        "cweagans/composer-patches": "^1.7.0",
+        "drupal/core-composer-scaffold": "^9.4.0",
         "drupal/admin_toolbar": "3.1.0",
-        "drupal/autologout": "1.3.0",
+        "drupal/autologout": "1.4.0",
         "drupal/bootstrap_layouts": "5.2.0",
-        "drupal/ckeditor_codemirror": "2.3.0",
+        "drupal/ckeditor_codemirror": "2.4.0",
         "drupal/console": "1.9.8",
-        "drupal/core": "^9",
-        "drupal/csv_serialization": "2.0.0",
-        "drupal/facets": "1.8.0",
-        "drupal/fontawesome": "2.21.0",
+        "drupal/core": "9.4.3",
+        "drupal/csv_serialization": "2.1.0",
+        "drupal/facets": "2.0.5",
+        "drupal/fontawesome": "2.23.0",
         "drupal/google_analytics": "3.1.0",
-        "drupal/honeypot": "2.0.2",
+        "drupal/honeypot": "2.1.1",
         "drupal/menu_breadcrumb": "1.16.0",
-        "drupal/metatag": "1.16.0",
+        "drupal/metatag": "1.21.0",
         "drupal/password_policy": "3.1.0",
-        "drupal/pathauto": "1.9.0",
+        "drupal/pathauto": "1.10.0",
         "drupal/redirect": "1.7.0",
         "drupal/redis": "1.5",
-        "drupal/search_api": "1.23.0",
-        "drupal/search_api_solr": "4.2.1",
-        "drupal/simple_sitemap": "4.1.1",
-        "drupal/token_filter": "1.3.0",
+        "drupal/search_api": "1.25.0",
+        "drupal/search_api_solr": "4.2.8",
+        "drupal/simple_sitemap": "4.1.2",
+        "drupal/token_filter": "1.4.0",
         "drupal/views_bootstrap": "4.3.0",
         "drupal/webform": "6.1.3",
         "drush/drush": "^10.0.0",
         "fortawesome/font-awesome": "6.1.1",
         "oomphinc/composer-installers-extender": "^2.0.0",
-        "opengov/gcweb": "dev-drupal9-compatibility",
+        "opengov/gcweb": "dev-master",
         "symfony/event-dispatcher": "^4.4",
         "webmozart/path-util": "^2.3",
-        "wikimedia/composer-merge-plugin": "2.0.1",
-        "zaporylie/composer-drupal-optimizations": "^1.2.0"
+        "wikimedia/composer-merge-plugin": "^2.0.0",
     },
     "require-dev": {
         "drupal/core-dev": "^9"
